<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
    <View android:id="@+id/fsea_top_V"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_alignParentTop="true"
        android:background="#fdee66" />

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hint_navigator"
        android:id="@+id/hintTV"
		android:textSize="25sp"
        android:textStyle="bold"
		android:layout_above="@+id/fsea_bottom_V"
		android:layout_marginLeft="7dp"
		android:layout_marginTop="7dp"
		android:layout_marginBottom="7dp"
		android:layout_toLeftOf="@+id/fpca_right_RL"
		android:layout_toStartOf="@+id/fpca_right_RL"
		android:layout_marginRight="7dp" />

	<View android:id="@+id/fsea_bottom_V"
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:layout_alignParentBottom="true"
        android:background="#fdee66" />
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fsea_top_V"
        android:layout_above="@+id/fsea_bottom_V"
        android:layout_toLeftOf="@+id/fpca_right_RL"
        android:layout_toStartOf="@+id/fpca_right_RL"
        android:padding="8dp" >

        <Button
            android:id="@+id/fseaSearchB"
            android:layout_width="134dp"
            android:layout_height="102dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sel_button_nav"
            android:text="@string/button_search"
            android:textColor="@color/text_green"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />
        
        <LinearLayout
            android:id="@+id/fseaTopRL"
            android:layout_width="650dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
			android:layout_marginTop="60dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/fseaSearchB"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp"
                android:weightSum="7" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/city"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/fseaCityED"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.5"
                    android:hint="@string/hint_city"
                    android:inputType="textPostalAddress"
                    android:text="@string/milan"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="26sp" />

                <Button
                    android:id="@+id/btnSearch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/icon_search"
                    android:padding="12dp" />

            </LinearLayout>
        	
        	<LinearLayout
        	    android:id="@+id/llRow2"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_below="@+id/llRow1"
        	    android:layout_toLeftOf="@+id/fseaSearchB"
        	    android:layout_toStartOf="@+id/fseaSearchB"
        	    android:orientation="horizontal"
        	    android:paddingLeft="8dp"
        	    android:paddingRight="8dp"
        	    android:paddingTop="16dp"
        	    android:weightSum="7" >
	            
            	<TextView
            	    android:layout_width="0dp"
            	    android:layout_height="wrap_content"
            	    android:layout_weight="1.5"
            	    android:text="@string/address"
            	    android:textColor="@color/white"
            	    android:textSize="24sp" />
	            
				<EditText
				    android:id="@+id/fseaAddressED"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="5.5"
				    android:hint="@string/hint_address"
				    android:inputType="textNoSuggestions"
				    android:textColor="@color/black"
				    android:textColorHint="@color/black"
				    android:textSize="26sp" />

                <Button
                    android:id="@+id/btnSearch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/icon_search" />				
	            
        	</LinearLayout>
        	
			<LinearLayout
			    android:id="@+id/llRow3"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/llRow1"
			    android:layout_toLeftOf="@+id/fseaSearchB"
			    android:layout_toStartOf="@+id/fseaSearchB"
			    android:orientation="horizontal"
			    android:paddingLeft="8dp"
			    android:paddingRight="8dp"
			    android:paddingTop="16dp"
			    android:weightSum="7" >
	            
            	<TextView
            	    android:layout_width="0dp"
            	    android:layout_height="wrap_content"
            	    android:layout_weight="1.5"
            	    android:text="@string/housenumber"
            	    android:textColor="@color/white"
            	    android:textSize="24sp" />
	            
				<EditText
				    android:id="@+id/fseaHouseNumberED"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="5.5"
				    android:hint="@string/hint_housenumber"
				    android:inputType="textNoSuggestions"
				    android:textColor="@color/black"
				    android:textColorHint="@color/black"
				    android:textSize="26sp" />
				 <Button
                    android:id="@+id/btnSearch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/icon_search" />
	            
        	</LinearLayout>        	
	        
	    </LinearLayout>
	    
    	<ListView android:id="@+id/fseaResultsLV"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/fseaTopRL"
        	android:padding="16dp"
        	android:dividerHeight="1dp"
        	android:divider="@color/white"
        	android:visibility="invisible"
			android:layout_marginBottom="20dp" />

    	<RelativeLayout
    	    android:id="@+id/fseaResultsRL"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/fseaTopRL"
    	    android:layout_marginTop="10dp" >

    		<TextView
    		    android:id="@+id/fseaResultsTV"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_centerHorizontal="true"
    		    android:gravity="center"
    		    android:text="@string/no_results"
    		    android:textColor="@color/white"
    		    android:textSize="32sp"
    		    android:textStyle="bold" />

    		<LinearLayout
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_below="@+id/fseaResultsTV"
    		    android:layout_centerHorizontal="true"
    		    android:layout_marginTop="18dp" >

    			<TextView
    			    android:id="@+id/fseaGotoTV"
    			    android:layout_width="wrap_content"
    			    android:layout_height="wrap_content"
    			    android:layout_gravity="center_vertical"
    			    android:text="@string/gotoCity"
    			    android:textAppearance="?android:attr/textAppearanceLarge"
    			    android:textSize="26sp" />

    			<ImageButton
    			    android:id="@+id/fseaGotoBTN"
    			    android:layout_width="90dp"
    			    android:layout_height="90dp"
    			    android:layout_marginLeft="16dp"
    			    android:background="@null"
    			    android:padding="5dp"
    			    android:scaleType="fitXY"
    			    android:src="@drawable/sel_button_disclosure_indicator" />

    		</LinearLayout>

    	</RelativeLayout>

    	<Button
    	    android:id="@+id/btnGo"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
    	    android:layout_alignRight="@+id/fseaResultsLV"
    	    android:layout_marginRight="15dp"
    	    android:layout_marginTop="12dp"
			android:text="@string/navigator_go"
    	    android:textSize="22sp"
			android:background="@drawable/sel_button_go_small"
			android:textStyle="bold"
			android:textColor="@color/text_green"
			android:gravity="bottom|center_horizontal"
			android:paddingBottom="4dp" />


		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@+id/btnGo"
			android:layout_centerHorizontal="true"
			android:text="@string/search_title"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="32sp" />

	</RelativeLayout>
    
    <RelativeLayout android:id="@+id/fpca_right_RL"
        android:layout_width="225dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/fsea_top_V"
        android:layout_above="@+id/fsea_bottom_V"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#3ea447" >
        
        <Button android:id="@+id/fseaSOSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/sel_button_sos" />
        
        <ImageButton android:id="@+id/fseaBackIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:src="@drawable/sel_button_back"
            android:contentDescription="@string/content_description"
            android:background="@null" />
        
    </RelativeLayout>
    
    
    <android.inputmethodservice.KeyboardView android:id="@+id/fseaKeyboardKV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
    
    
</RelativeLayout>
